refactor: moved files and directories into appropriate modules

--- a/KeepTrack.Modules/Company/Companies.Application/Companies.Application.csproj
+++ b/KeepTrack.Modules/Company/Companies.Application/Companies.Application.csproj
@@ -12,10 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Identity\Authentication.Messages\Authentication.Messages.csproj" />
     <ProjectReference Include="..\Companies.Domain\Companies.Domain.csproj" />
     <ProjectReference Include="..\Companies.Infrastructure\Companies.Infrastructure.csproj" />
     <ProjectReference Include="..\Companies.Messages\Companies.Messages.csproj" />
-    <ProjectReference Include="..\KeepTrack.Modules\Identity\Authentication.Messages\Authentication.Messages.csproj" />
   </ItemGroup>
 
 </Project>
