feat: init task module

--- a/KeepTrack.Modules/Tasks/Task.Domain/TaskManagment.Domain.csproj
+++ b/KeepTrack.Modules/Tasks/Task.Domain/TaskManagment.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\KeepTrack.Common\KeepTrack.Common.csproj" />
+  </ItemGroup>
+
 </Project>
