--- a/KeepTrack.Persistance/KeepTrack.Persistance.csproj
+++ b/KeepTrack.Persistance/KeepTrack.Persistance.csproj
@@ -11,6 +11,7 @@
     <ProjectReference Include="..\KeepTrack.Common\KeepTrack.Common.csproj" />
     <ProjectReference Include="..\KeepTrack.Modules\Employees\Employees.Infrastructure\Employees.Infrastructure.csproj" />
     <ProjectReference Include="..\KeepTrack.Modules\Identity\Authentication.Infastructure\Authentication.Infastructure.csproj" />
+    <ProjectReference Include="..\KeepTrack.Modules\Tasks\Task.Infrastructure\TaskManagment.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
