--- a/Subscription.Application/Subscription.Application.csproj
+++ b/Subscription.Application/Subscription.Application.csproj
@@ -7,15 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="MediatR" Version="12.4.0" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.5" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\KeepTrack.Modules\Identity\Authentication.Messages\Authentication.Messages.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Queries\" />
+    <ProjectReference Include="..\Subscription.Domain\Subscription.Domain.csproj" />
   </ItemGroup>
 
 </Project>
