--- a/KeepTrackr.Client/package.json
+++ b/KeepTrackr.Client/package.json
@@ -23,6 +23,8 @@
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-calendar": "^5.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-redux": "^9.1.2",
@@ -58,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-color": "^3.0.12",
     "eslint-config-react-app": "^7.0.1",
     "jest-editor-support": "^32.0.0-beta.0"
   }
